test/files/neg/t7214neg.check
t7214neg.scala:28: error: not enough patterns for object Extractor offering Any: expected 1, found 0
    case Extractor() =>
         ^
1 error
